<resources>
    <string name="app_name">LelTár</string>
    <string name="devices">Eszközök:</string>
    <string name="new_rent">Új bérlés felvétele</string>
    <string name="renter_name">Bérlő neve:</string>
    <string name="given_by">Kiadta:</string>
    <string name="out_date">Kivitel dátuma:</string>
    <string name="choose_date">Dátum kiválasztása</string>
    <string name="prop_backDate">Visszahozatal várható dátuma:</string>
    <string name="add">Hozzáadás</string>
    <string name="save">Mentés</string>
    <string name="add_device">Új eszköz hozzáadása</string>
    <string name="maker">Gyártó:</string>
    <string name="type">Típus:</string>
    <string name="basic_name">Egyszerű név:</string>
    <string name="value">Érték:</string>
    <string name="others">Egyebek:</string>
    <string name="delete">Törlés</string>
    <string name="edit">Szerkesztés</string>

    <string name="back">Vissza</string>
    <string name="rents">Bérlések</string>
    <string name="new_text">Új</string>
    <string name="open">Megnyitás</string>
    <string name="get_back">Visszavétel</string>
    <string name="is_back">Visszajött</string>
    <string name="act_back_date">Visszajött ekkor:</string>
    <string name="undo">Visszavonás</string>
    <string name="device_list">Eszközlista</string>
    <string name="list_of_rents">Bérlések listája</string>
    <string name="title">LelTár - leltározó és bérlésmenedzser</string>
    <string name="manage_devices">Eszközök kezelése</string>
    <string name="manage_rents">Bérlések kezelése</string>
</resources>
